# Hecate

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  rust.yml
src/: anti_forensics.rs  config.rs  crypto.rs  lib.rs  main.rs  memory_protection.rs  monitoring.rs  utils.rs  wiping.rs
tests/: advanced_security_tests.rs  basic_tests.rs
