[package]
name = "hecate"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
sha3 = "0.10"
mimalloc = { version = "0.1", features = ["secure"] }
libc = "0.2"
argon2 = "0.5"
secrecy = { version = "0.8", features = ["serde"] }
